--- a/musefuly app/backend/package.json
+++ b/musefuly app/backend/package.json
@@ -1,8 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,3 +24,4 @@
     "spotify-web-api-node": "^5.0.2"
   }
 }
+
